--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -1,1 +1,102 @@
+* {
+	box-sizing:  border-box;
+	padding: 0;
+	margin: 0;
+	font-family: Helvetica;
+}
 
+h1 {
+	text-align: center;
+	margin-top: 50px;
+	margin-bottom: 25px;
+}
+
+
+p{
+	width: 100%;
+	height: 100%;
+	color: white;
+}
+
+section {
+	position: relative;
+	top:  0;
+	padding: 10px;
+	float: left;
+}
+
+.row {
+	width: 100%;
+}
+
+.container {
+	position: relative;
+	margin:  10px;
+}
+
+.description {
+	position: relative;
+	top: 0;
+	padding: 50px 20px 20px 20px;
+	background-color: steelblue;
+	border: 1px solid black;
+}
+
+#section-title-1 {
+	background-color: orangered;
+	border:  1px solid black;
+	text-align: center;
+	padding:  8px;
+	height: 32px;
+	width: 100px;
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+
+#section-title-2 {
+	background-color: green;
+	border:  1px solid black;
+	text-align: center;
+	padding:  8px;
+	height: 32px;
+	width: 100px;
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+
+#section-title-3 {
+	background-color: deepskyblue;
+	border:  1px solid black;
+	text-align: center;
+	padding:  8px;
+	height: 32px;
+	width: 100px;
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+
+
+@media (min-width: 992px) {
+	.col-lg-4 {
+		width: 33.33%;
+	}
+}
+
+@media (min-width: 768px) and (max-width:  991px) {
+	.col-md-6 {
+		width: 50%;
+	}
+	.col-md-12 {
+		width: 100%;
+	}
+
+}
+
+@media (max-width:  767px) {
+	.col-sm-12{
+		width: 100%;
+	}
+}
